# loodsenboekje

./: .gitignore  .ignore  Cargo.toml  README.md  flake.nix  justfile  shell.nix
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-31d271168f7f508e0baf82bd00b02dfc41e4d634cab295244cacb12264fb193f.json  query-5ce03ff493a957b6bdb20964eaa3a87beaf3a1ad71864e48e8de19abb0b96ffb.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-a99b7a03f4259f4cf7364809878844f0665971cdf433c03690d9a357c37199bc.json  query-ad168cf9c1415a25356e8f1b57dc7b8bbce2add38396eba8e028926fc3a21a51.json  query-cbad846f76865cdc7c4cf56addc519290208ba2ac75febd3507c20a23659efc9.json
docs/: authelia-integration.md
loodsenboekje-rust/: Cargo.toml
loodsenboekje-rust/.sqlx/: query-064fdf772e44c2ae6e431564eef960c998480a5c69ddc2bae93506973e822303.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-3d7b11c39a4735be32b78d3bcb9869e05c16460971bcc67bb82f33ccffd4c7fa.json  query-4206dff7dfafdf9ea5271d019b68891506e06a1c00a3200a3ef8cbc8e32e4da3.json  query-83d7e356e902b6a1aa2cb78293ae5c35f6e2ed12308cb5b9dcfd83cd1bbfa98c.json  query-f9619212c1bc4fdb25e864697c98313f036accbce76e72d6b14b603683032f73.json
loodsenboekje-rust/examples/: requests.rs
loodsenboekje-rust/migrations/: 20230811100825_entry.sql
loodsenboekje-rust/src/: error.rs  main.rs  model.rs
loodsenboekje-rust/src/web/: api.rs
migrations/: 20231109112123_initial.sql
nix/: module.nix  package.nix
public/: style.css
src/: app.rs  auth.rs  components.rs  error.rs  errors.rs  lib.rs  main.rs  model.rs
src/auth/: authelia.rs  mod.rs
src/model/: entry.rs  error.rs  mod.rs  user.rs
src/web/: api.rs  auth.rs  mod.rs
static/: index.html
