[package]
name = "loodsenboekje"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.6.4", optional = true }
chrono = { version = "0.4.30", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_with = { version = "3.2.0", features = ["json"] }
cfg-if = "1"
leptos = { version = "0.5.2", features = ["nightly"] }
leptos_axum = { version = "0.5", optional = true }
leptos_meta = { version = "0.5", features = ["nightly"] }
leptos_router = { version = "0.5", features = ["nightly"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "chrono"], optional = true }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.4", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.87"
axum_session = { version = "0.8.0", features = ["sqlite-rustls"], optional = true }
bcrypt = "0.15.0"
dotenvy = "0.15.7"
log = "0.4.20"
simplelog = "0.12.1"
csv = "1.3.0"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:leptos_axum",
    "dep:tower-http",
    "dep:sqlx",
    "dep:axum_session",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "leptos-loodsenboekje"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"
watch = false
env = "DEV"

bin-target = "loodsenboekje"
bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[[bin]]
name = "load_data"
required-features = ["ssr"]

