[package]
name = "loodsenboekje"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
httpc-test = "0.1.5"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
sqlx = "0.7.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }
