[package]
name = "loodsenboekje"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_with = { version = "3.2.0", features = ["json"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.72"
httpc-test = "0.1.5"
